# xbcwalletsource

./: .gitignore  Makefile.am  configure.ac
contrib/: bitcoin-qt.pro
doc/: assets-attribution.txt
share/: setup.nsi.in
share/qt/: Info.plist.in  extract_strings_qt.py
src/: Makefile.am  Makefile.include  bitcoind-res.rc  bitcoinrpc.cpp  bitcoinrpc.h  clientversion.h  db.cpp  init.cpp  init.h  key.cpp  key.h  main.cpp  main.h  net.cpp  net.h  netbase.cpp  rpcwallet.cpp  script.cpp  script.h  serialize.h  txdb-leveldb.cpp  ui_interface.h  util.cpp  util.h  wallet.cpp
src/qt/: Makefile.am  addressbookpage.cpp  bitcoin.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  clientmodel.cpp  coincontroltreewidget.h  guiutil.cpp  messagemodel.cpp  messagepage.cpp  notificator.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  qrcodedialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendmessagesdialog.cpp  splashscreen.cpp
src/qt/forms/: messagepage.ui  optionsdialog.ui  sendcoinsentry.ui
src/qt/res/: bitcoin-qt-res.rc
